[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }

reqwest = { version = "0.12.26", features = ["json"] }
scraper = "0.25.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"

thiserror = "2.0.17"
